fixed bug with text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@ body {
   font-family: 'Kosugi Maru', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
